<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/id1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/tekstUpit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/dRun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/pretraga" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/id2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/dAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dodaj" />

            <Button
                android:id="@+id/dPovratak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/povratak" />
        </LinearLayout>

    <TextView
        android:id="@+id/k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kategorije"
        android:textSize="24dp"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/knjige"
        android:textSize="24dp"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/sRezultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>