<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <ScrollView
            android:id="@+id/scrollid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="81dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lKontakti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/kontakti" />

                <LinearLayout
                    android:id="@+id/scid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sKontakti"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <Button
                        android:id="@+id/dPosalji"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/posalji" />


                </LinearLayout>

                <TextView
                    android:id="@+id/podaciOKnjizi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacijeOKnjizi"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:id="@+id/podaciSlika"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"/>
                <TextView
                    android:id="@+id/podaciNaslov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/podaciAutorL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autori"
                    android:textStyle="bold"
                    android:textSize="19dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/podaciAutori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/podaciDatumL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datumObjavljivanja"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="19dp"/>
                <TextView
                    android:id="@+id/podaciDatum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/podaciStraneL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brojStranica"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="19dp"/>
                <TextView
                    android:id="@+id/podaciStrane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/podaciOpisL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opis"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="19dp"/>
                <TextView
                    android:id="@+id/podaciOpis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>






        </ScrollView>





    </LinearLayout>

</android.support.constraint.ConstraintLayout>